--- a/js/build.xml
+++ b/js/build.xml
@@ -38,6 +38,7 @@ limitations under the License.
 	<property name="build.export"					value="${build.base}/../export"/>
 	<property name="build.demo"						value="${build.base}/../doc/demo"/>
 	<property name="build.tools"					value="${build.base}/../tools"/>
+	<property name="build.tools.qmlizer"			value="${build.base}/../tools/qmlizer"/>
 	<property name="build.tools.build"				value="${build.base}/../tools/build"/>
 	
 	<property name="build.bin"						value="${build.base}/bin"/>
@@ -472,6 +473,21 @@ limitations under the License.
 			<arg value="${build.output.dyncode}/ilib.js"/>
 			<arg value="-m"/>
 		</exec>
+		<exec osfamily="unix" executable="node" dir="${build.base}" failifexecutionfails="true">
+			<arg value="${build.tools.qmlizer}/qmlizer.js"/>
+			<arg value="${build.output.dyncode}/ilib.js"/>
+			<arg value="${build.output.dyncode}/ilib.js"/>
+		</exec>
+		<exec osfamily="mac" executable="node" dir="${build.base}" failifexecutionfails="true">
+			<arg value="${build.tools.qmlizer}/qmlizer.js"/>
+			<arg value="${build.output.dyncode}/ilib.js"/>
+			<arg value="${build.output.dyncode}/ilib.js"/>
+		</exec>
+		<exec osfamily="windows" executable="node.exe" dir="${build.base}" failifexecutionfails="true">
+			<arg value="${build.tools.qmlizer}/qmlizer.js"/>
+			<arg value="${build.output.dyncode}/ilib.js"/>
+			<arg value="${build.output.dyncode}/ilib.js"/>
+		</exec>
 
 		<!-- then do all the rest of them -->
 		<apply osfamily="unix" executable="node" dest="${build.output.dyncode}" parallel="false">
@@ -502,6 +518,30 @@ limitations under the License.
 			<arg value="-m"/>
 			<fileset dir="${build.lib}" includes="*.js"  excludes="ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
 			<fileset dir="${build.lib}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
+			<mapper type="glob" from="*.js" to="*.js"/>
+		</apply>
+		<apply osfamily="unix" executable="node" dest="${build.output.dyncode}" parallel="false" force="true">
+			<arg value="${build.tools.qmlizer}/qmlizer.js"/>
+			<srcfile/>
+			<targetfile/>
+			<fileset dir="${build.output.dyncode}" includes="*.js" excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
+			<fileset dir="${build.output.dyncode}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
+			<mapper type="glob" from="*.js" to="*.js"/>
+		</apply>
+		<apply osfamily="mac" executable="node" dest="${build.output.dyncode}" parallel="false" force="true">
+			<arg value="${build.tools.qmlizer}/qmlizer.js"/>
+			<srcfile/>
+			<targetfile/>
+			<fileset dir="${build.output.dyncode}" includes="*.js" excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
+			<fileset dir="${build.output.dyncode}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
+			<mapper type="glob" from="*.js" to="*.js"/>
+		</apply>
+		<apply osfamily="windows" executable="node.exe" dest="${build.output.dyncode}" parallel="false" force="true">
+			<arg value="${build.tools.qmlizer}/qmlizer.js"/>
+			<srcfile/>
+			<targetfile/>
+			<fileset dir="${build.output.dyncode}" includes="*.js" excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
+			<fileset dir="${build.output.dyncode}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
 			<mapper type="glob" from="*.js" to="*.js"/>
 		</apply>
 	</target>
