--- a/qt/build.xml
+++ b/qt/build.xml
@@ -43,7 +43,7 @@ limitations under the License.
 	
 	<property name="build.lib"						value="${build.base}/lib"/>
 	<property name="build.output"					value="${build.base}/output"/>
-	<property name="build.output.qt"				value="${build.base}/build-filereader"/>
+	<property name="build.output.qt"				value="${build.base}/output/qt"/>
 	
 	<property name="build.filereader"				value="${build.base}/FileReader"/>
 	<property name="build.unittest"					value="${build.base}/UnitTest"/>
@@ -64,9 +64,6 @@ limitations under the License.
 	<target name="all" depends="export,doc" description="Build everything. This is the target that the build should run."/>
 
 	<target name="clean" description="Remove all generated files to start from scratch">
-		<delete dir="${build.output.qt}"/>
-		<delete dir="${build.output}"/>
-		<delete dir="${build.export}/qt"/>
 		<sequential>
 			<exec osfamily="unix" executable="make" dir="${build.filereader}" failifexecutionfails="true" failonerror="true">
 				<arg line="clean"/>
@@ -78,10 +75,15 @@ limitations under the License.
 				<arg line="clean"/>
 			</exec>
 		</sequential>
+		<delete dir="${build.output}"/>
+		<delete dir="${build.export}/qt"/>
+		<delete>
+			<fileset dir="${build.filereader}" includes="Makefile*" />
+		</delete>
 	</target>
 
 	<target name="prepare" description="Prepare all directories that are needed before the project can be built">
-		<mkdir dir="${build.output}"/>
+		<mkdir dir="${build.output.qt}"/>
 		<sequential>
 			<exec osfamily="unix" executable="${QTBIN}/qmake" dir="${build.filereader}" failifexecutionfails="true" failonerror="true">
 				<arg value="filereader.pro"/>
@@ -99,13 +101,6 @@ limitations under the License.
 	<!-- Create the core jar file                                            -->
 	<!-- =================================================================== -->
 	<target name="filereader" depends="prepare" description="Build the file reader plugin">
-		<exec osfamily="unix" executable="qmake" dir="${build.filereader}" failifexecutionfails="true" failonerror="true">
-		</exec>
-		<exec osfamily="mac" executable="qmake" dir="${build.filereader}" failifexecutionfails="true" failonerror="true">
-		</exec>
-		<exec osfamily="windows" executable="qmake.exe" dir="${build.filereader}" failifexecutionfails="true"  failonerror="true">
-		</exec>
-
 		<exec osfamily="unix" executable="make" dir="${build.filereader}" failifexecutionfails="true" failonerror="true">
 		</exec>
 		<exec osfamily="mac" executable="make" dir="${build.filereader}" failifexecutionfails="true" failonerror="true">
