--- a/js/build.xml
+++ b/js/build.xml
@@ -457,21 +457,21 @@ limitations under the License.
 			<arg value="${build.output.js}/ilib.js"/>
 			<arg value="-o"/>
 			<arg value="${build.output.dyncode}/ilib.js"/>
-			<arg value="-m"/>
+			<arg value="--no-mangle-functions"/>
 		</exec>
 		<exec osfamily="mac" executable="node" dir="${build.base}" failifexecutionfails="true">
 			<arg value="${uglify.location}/bin/uglifyjs"/>
 			<arg value="${build.output.js}/ilib.js"/>
 			<arg value="-o"/>
 			<arg value="${build.output.dyncode}/ilib.js"/>
-			<arg value="-m"/>
+			<arg value="--no-mangle-functions"/>
 		</exec>
 		<exec osfamily="windows" executable="node.exe" dir="${build.base}" failifexecutionfails="true">
 			<arg value="${uglify.location}/bin/uglifyjs"/>
 			<arg value="${build.output.js}/ilib.js"/>
 			<arg value="-o"/>
 			<arg value="${build.output.dyncode}/ilib.js"/>
-			<arg value="-m"/>
+			<arg value="--no-mangle-functions"/>
 		</exec>
 		<exec osfamily="unix" executable="node" dir="${build.base}" failifexecutionfails="true">
 			<arg value="${build.tools.qmlizer}/qmlizer.js"/>
@@ -495,7 +495,7 @@ limitations under the License.
 			<srcfile/>
 			<arg value="-o"/>
 			<targetfile/>
-			<arg value="-m"/>
+			<arg value="--no-mangle-functions"/>
 			<fileset dir="${build.lib}" includes="*.js" excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
 			<fileset dir="${build.lib}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
 			<mapper type="glob" from="*.js" to="*.js"/>
@@ -505,7 +505,7 @@ limitations under the License.
 			<srcfile/>
 			<arg value="-o"/>
 			<targetfile/>
-			<arg value="-m"/>
+			<arg value="--no-mangle-functions"/>
 			<fileset dir="${build.lib}" includes="*.js"  excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
 			<fileset dir="${build.lib}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
 			<mapper type="glob" from="*.js" to="*.js"/>
@@ -515,7 +515,7 @@ limitations under the License.
 			<srcfile/>
 			<arg value="-o"/>
 			<targetfile/>
-			<arg value="-m"/>
+			<arg value="--no-mangle-functions"/>
 			<fileset dir="${build.lib}" includes="*.js"  excludes="ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
 			<fileset dir="${build.lib}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
 			<mapper type="glob" from="*.js" to="*.js"/>
