fix make clean error
When execute 'ant clean' again, 'make clean' fails because there is no
Makefile. Fix this error.

--- a/qt/build.xml
+++ b/qt/build.xml
@@ -65,13 +65,13 @@ limitations under the License.
 
 	<target name="clean" description="Remove all generated files to start from scratch">
 		<sequential>
-			<exec osfamily="unix" executable="make" dir="${build.filereader}" failifexecutionfails="true" failonerror="true">
+			<exec osfamily="unix" executable="make" dir="${build.filereader}" failifexecutionfails="true" failonerror="false">
 				<arg line="clean"/>
 			</exec>
-			<exec osfamily="mac" executable="make" dir="${build.filereader}" failifexecutionfails="true" failonerror="true">
+			<exec osfamily="mac" executable="make" dir="${build.filereader}" failifexecutionfails="true" failonerror="false">
 				<arg line="clean"/>
 			</exec>
-			<exec osfamily="windows" executable="make.exe" dir="${build.filereader}" failifexecutionfails="true"  failonerror="true">
+			<exec osfamily="windows" executable="make.exe" dir="${build.filereader}" failifexecutionfails="true"  failonerror="false">
 				<arg line="clean"/>
 			</exec>
 		</sequential>
