More fiexs for QA result. Sync up cldr 26.0.1

--- a/qt/build.properties
+++ b/qt/build.properties
@@ -15,7 +15,8 @@
 # 
 
 # Where is your Qt installed?
-QTDIR=/opt/Qt
+QTDIR=/home/goun/Qt/5.5
+
 
 # modify this for your platform
-QTBIN=/opt/Qt/5.4/gcc_64/bin
+QTBIN=/home/goun/Qt/5.5/gcc_64/bin
