--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,9 @@
 language: node_js
-  - "0.10.x"
+node_js:
   - "4"
   - "6"
-  - "node"
 env:
   - CXX=g++-4.8
-  addons:
-    apt:
-      sources:
-      packages:
-        - gcc-4.8
-        - g++-4.8
-        - ant-1.9.6
 branches:
   only:
     - master
