--- a/js/build.xml
+++ b/js/build.xml
@@ -114,7 +114,11 @@ limitations under the License.
         <attribute name="srcfilename"/>
         <attribute name="locales"/>
 		<sequential>
-			<java dir="${build.lib}" fork="true" classname="com.ilib.tools.jsa.JSAssemble" classpathref="project.classpath.jsa">
+			<java dir="${build.lib}" 
+					fork="true" 
+					maxmemory="6000m"
+					classname="com.ilib.tools.jsa.JSAssemble" 
+					classpathref="project.classpath.jsa">
 				<arg value="-I"/>
 				<arg value="${build.locale}"/>
 				<arg value="-I"/>
