--- a/build.xml
+++ b/build.xml
@@ -106,12 +106,16 @@ limitations under the License.
 		
 	</target>
 
-	<target name="test" description="Run all tests and build all reports">
+	<target name="test" depends="export" description="Run all tests and build all reports">
 		<iterate target="test"/>
 	</target>
 	
 	<target name="doc" description="Extract all the inline documentation.">
 		<iterate target="doc"/>
+	</target>
+
+	<target name="deps" description="Install dependencies for travis-ci">
+		<!-- nothing yet -->
 	</target>
 	
 </project>
