Make sure the tools dir build.xml has all the required targets

--- a/tools/build.xml
+++ b/tools/build.xml
@@ -98,6 +98,10 @@ limitations under the License.
 	<target name="prepare" description="Prepare all directories that are needed before the project can be built">
 	</target>
 
+	<target name="test" description="Test anything that needs testing"/>
+
+	<target name="doc" description="Generate any documentation"/>
+
 	<!-- =================================================================== -->
 	<!-- Create the core jar file                                            -->
 	<!-- =================================================================== -->
