Fix the build scripts to make a real build.
"ant dist" did not work properly because the dependencies
were not built first, and "ant doc" did not work with
Java 8 because a VM argument was no longer supported.

--- a/build.xml
+++ b/build.xml
@@ -63,7 +63,7 @@ limitations under the License.
 		<delete dir="${build.export}"/>
 	</target>
 
-	<target name="dist" description="Build the distribution package.">
+	<target name="dist" depends="all" description="Build the distribution package.">
 		<mkdir dir="${build.dist}" description="Dir to contain all the distribution outputs"/>
 		<iterate target="export"/>
 		<zip destfile="${build.dist}/ilib-${version}.zip"
