Start on getting nodeunit to run on the command-line from ant

--- a/js/build.xml
+++ b/js/build.xml
@@ -680,6 +680,26 @@ limitations under the License.
 			</fileset>
 		</tar>
 	</target>
+
+	<macrodef name="run-nodeunit">
+		<attribute name="suite"/>
+		<attribute name="failquit"/>
+		<sequential>
+			<exec osfamily="unix" executable="node" dir="${build.test}" failifexecutionfails="@{failquit}" failonerror="@{failquit}">
+				<arg line="../node_modules/nodeunit/bin/nodeunit"/>
+				<arg line="@{suite}/nodeunit/testSuite.js"/>
+			</exec>
+			<exec osfamily="mac" executable="node" dir="${build.test}" failifexecutionfails="@{failquit}" failonerror="@{failquit}">
+				<arg line="../node_modules/nodeunit/bin/nodeunit"/>
+				<arg line="@{suite}/nodeunit/testSuite.js"/>
+			</exec>
+			<exec osfamily="windows" executable="node.exe" dir="${build.test}" failifexecutionfails="@{failquit}"  failonerror="@{failquit}">
+				<arg line="../node_modules/nodeunit/bin/nodeunit"/>
+				<arg line="@{suite}/nodeunit/testSuite.js"/>
+			</exec>
+		</sequential>
+	</macrodef>
+
 	<macrodef name="runtests">
         <attribute name="assembly"/>
         <attribute name="compilation"/>
@@ -728,6 +748,11 @@ limitations under the License.
 			</exec>
 		</sequential>
 	</macrodef>
+
+	<target depends="assemble.dyncode.unittest" name="test.util.nu">
+		<run-nodeunit suite="util" failquit="true"/>
+	</target>
+
 	<target depends="assemble.dyncode.unittest" name="test.util">
 		<runtests suite="util" assembly="dynamic" compilation="compiled" failquit="true"/>
 	</target>
