Make sure the dependencies are correct for the nodeunit tests

--- a/js/build.xml
+++ b/js/build.xml
@@ -697,50 +697,50 @@ limitations under the License.
 		</sequential>
 	</macrodef>
 
-	<target depends="assemble.dyncode.unittest" name="test.address.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.address.nu">
 		<run-nodeunit suite="address" failquit="true"/>
 	</target>
 	
-	<target depends="assemble.dyncode.unittest" name="test.calendar.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.calendar.nu">
 		<run-nodeunit suite="calendar" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.collate.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.collate.nu">
 		<run-nodeunit suite="collate" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.ctype.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.ctype.nu">
 		<run-nodeunit suite="ctype" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.date.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.date.nu">
 		<run-nodeunit suite="date" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.daterange.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.daterange.nu">
 		<run-nodeunit suite="daterange" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.durfmt.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.durfmt.nu">
 		<run-nodeunit suite="durfmt" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.maps.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.maps.nu">
 		<run-nodeunit suite="maps" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.name.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.name.nu">
 		<run-nodeunit suite="name" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.number.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.number.nu">
 		<run-nodeunit suite="number" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.phone.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.phone.nu">
 		<run-nodeunit suite="phone" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.root.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.root.nu">
 		<run-nodeunit suite="root" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.strings-ext.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.strings-ext.nu">
 		<run-nodeunit suite="strings-ext" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.units.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.units.nu">
 		<run-nodeunit suite="units" failquit="true"/>
 	</target>
-	<target depends="assemble.dyncode.unittest" name="test.util.nu">
+	<target depends="assemble.dyncode.unittest,update.package.json" name="test.util.nu">
 		<run-nodeunit suite="util" failquit="true"/>
 	</target>
 	
